--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ div.stats {
       box-sizing: border-box;
       transition: all 0.2s linear;
       margin: 5px; }
+
   div.stats #player2 {
     text-align: center;
     display: inline-block;
@@ -107,6 +108,7 @@ div.stats {
     padding: 0 15px 20px;
     border-top-right-radius: 3px;
     color: #B93848; }
+
     div.stats #player2 .capturedPiece {
       width: 2.4vmin;
       height: 2.4vmin;
@@ -119,16 +121,19 @@ div.stats {
       box-sizing: border-box;
       transition: all 0.2s linear;
       margin: 5px; }
+
   div.stats div.turn {
     height: 10px;
     width: 100%;
     /*background: linear-gradient(to right, #BEEE62 50%, transparent 50%);*/
     /*background: linear-gradient(to right, transparent 50%, #BEEE62 50%);*/
     border-radius: 0 0 3px 3px; }
+
   div.stats span#winner {
     display: block;
     padding: 10px 0 0;
     text-align: center; }
+
   div.stats button#cleargame {
     display: block;
     border: 0;
@@ -153,11 +158,14 @@ div#board {
   box-shadow: 1px 1px 3px #232621;
   background-color: #B93848;
   overflow: hidden; }
+
   div#board .tile {
     width: 10vmin;
     height: 10vmin;
     position: absolute;
-    background-color: #232621; }
+    background-color: #232621; 
+  }
+
     div#board .player1pieces .piece {
     position: absolute;
     width: 8vmin;
@@ -176,7 +184,8 @@ div#board {
     border: 1vmin solid #B93848; }
     div#board .player1pieces .piece.selected {
       box-shadow: 0 0 10px 5px #16A8C7; }
-      div#board .player2pieces .piece {
+
+    div#board .player2pieces .piece {
     position: absolute;
     width: 8vmin;
     height: 8vmin;
@@ -192,8 +201,17 @@ div#board {
     margin-left: 1vmin;
     cursor: pointer;
     border: 1vmin solid #8b8bff; }
+
     div#board .player2pieces .piece.selected {
       box-shadow: 0 0 10px 5px #16A8C7; }
+
+
+    div#board .pult .selection {
+      width: 10vmin;
+      height: 10vmin;
+      position: absolute;
+      background-color: #ff0505; }
+  
 
 /*# sourceMappingURL=style.css.map */
 
