--- a/src/index.css
+++ b/src/index.css
@@ -210,7 +210,7 @@ div#board {
       width: 10vmin;
       height: 10vmin;
       position: absolute;
-      background-color: #ff0505; }
+      background-color: #ffffff77; }
   
 
 /*# sourceMappingURL=style.css.map */
