--- a/src/index0.css
+++ b/src/index0.css
@@ -25,12 +25,9 @@ html, body {
   margin: 0;
   padding: 0;
   color: #333333;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- }
+  font-family: "Lato", Calibri, sans-serif;
+  font-size: 16px;
+  background-color: #3A3042; }
   /*
   html h1, body h1 {
     margin-top: 10px; }
@@ -82,8 +79,6 @@ div.column {
   height: 100%;
   min-height: 100%;
   width: 50%;
-  display:flex;
-  flex-direction:column;
 }
 
 /*
@@ -98,14 +93,14 @@ div.info, div.stats {
   width: 70%;
   margin: 13vmin auto 0;
   box-sizing: border-box;
-  padding: 2% 30px;
+  padding: 20px 30px;
   background-color: #F1F1FF;
   color: #3A3042;
   border-radius: 3px;
   box-shadow: 1px 1px 3px #232621; }
 
 div.stats {
-  margin: 2% auto !important; }
+  margin: 50px auto !important; }
   div.stats .wrapper {
     display: flex; }
   div.stats #player1 {
@@ -183,12 +178,10 @@ div.stats {
 
 div#board {
   position: absolute;
-  /*top: calc(50% - 40vmin);*/
-  top:0;
+  top: calc(50% - 40vmin);
   left: calc(50% - 40vmin);
   width: 80vmin;
   height: 80vmin;
-  /*height:100%;*/
   border-radius: 5px;
   box-shadow: 1px 1px 3px #232621;
   background-color: #B93848;
