--- a/src/index_flex.css
+++ b/src/index_flex.css
@@ -25,9 +25,12 @@ html, body {
   margin: 0;
   padding: 0;
   color: #333333;
-  font-family: "Lato", Calibri, sans-serif;
-  font-size: 16px;
-  background-color: #3A3042; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ }
   /*
   html h1, body h1 {
     margin-top: 10px; }
@@ -72,7 +75,6 @@ html, body {
 }
 */
 
-/* раньше это были половинки, сейчас лево и право разные
 div.column {
   position: relative;
   float: left;
@@ -80,33 +82,9 @@ div.column {
   height: 100%;
   min-height: 100%;
   width: 50%;
+  display:flex;
+  flex-direction:column;
 }
-*/
-
-.column1 {
-  background-color: green;
-  height: calc(100vmin - 144px);
-  flex: 1 1;
-  /*
-  width: calc(100vmax-100vmin);
-  min-width: calc(100vmax-100vmin);
-  height: 100vmin;
-  margin: 0 auto;
-  */
-}
-
-.column2 {
-  background-color: #AAAAAA;
-  height: calc(100vmin - 144px);
-  /*
-  height: 100vmin;
-  margin: 0 auto;
-  height: 100vmin;
-  */
-  flex: 0 0 calc(100vmin - 144px);
-}
-
-
 
 /*
 @media screen and (max-width: 1000px) {
@@ -120,14 +98,14 @@ div.info, div.stats {
   width: 70%;
   margin: 13vmin auto 0;
   box-sizing: border-box;
-  padding: 20px 30px;
+  padding: 2% 30px;
   background-color: #F1F1FF;
   color: #3A3042;
   border-radius: 3px;
   box-shadow: 1px 1px 3px #232621; }
 
 div.stats {
-  margin: 50px auto !important; }
+  margin: 2% auto !important; }
   div.stats .wrapper {
     display: flex; }
   div.stats #player1 {
@@ -204,19 +182,21 @@ div.stats {
       background-color: #0c5a6b; }
 
 div#board {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  /*top: calc(50% - 40vmin);*/
+  top:0;
+  left: calc(50% - 40vmin);
+  width: 80vmin;
+  height: 80vmin;
+  /*height:100%;*/
   border-radius: 5px;
   box-shadow: 1px 1px 3px #232621;
   background-color: #B93848;
   overflow: hidden; }
 
   div#board .tile {
-    width: 12.5%;
-    height: 12.5%;
+    width: 10vmin;
+    height: 10vmin;
     position: absolute;
     background-color: #232621; 
   }
@@ -227,8 +207,8 @@ div#board {
     vertical-align: center;
     /**/
     position: absolute;
-    width: 10%;
-    height: 10%;
+    width: 8vmin;
+    height: 8vmin;
     background-color: #e4a6ae;
     background-size: 65%;
     background-repeat: no-repeat;
@@ -250,8 +230,8 @@ div#board {
     vertical-align: center;
     /**/
     position: absolute;
-    width: 10%;
-    height: 10%;
+    width: 8vmin;
+    height: 8vmin;
     background-color: #F1F1FF;
     background-size: 65%;
     background-repeat: no-repeat;
@@ -270,8 +250,8 @@ div#board {
 
 
     div#board .pult .selection {
-      width: 10%;
-      height: 10%;
+      width: 10vmin;
+      height: 10vmin;
       position: absolute;
       background-color: #ffffff77; }
   
